tests/errors/preprocessor/018_branch.c.expect
./tests/errors/preprocessor/018_branch.c:1:5: error: unexpected end of file, expected #endif, #else, #elif, #elifdef or #elifndef
1 | #if 0
        ^
./tests/errors/preprocessor/018_branch.c:1:3: error: unterminated #if
1 | #if 0
      ^
